<resources>
    <string name="app_name">Food Delivery</string>
    <string name="introduce_usuario">Introduce tu nombre de Usuario</string>
    <string name="introduce_password">Introduce tu Password</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="btn_enter">Entrar</string>
    <string name="usuario_incorrecto">Usuario Incorrecto</string>
    <string name="password_incorrecto">Contraseña Incorrecta</string>
    <string name="btn_mostrar">Mostrar</string>
    <string name="campo_obligatorio">Campo obligatorio</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_volver">Volver</string>
    <string name="elige_restaurante">Elige tu Restaurante VIP</string>
    <string name="texto_registrarse">No estás registrado?</string>
    <string name="registrate">Regístrate</string>
    <string name="btn_registro">Aceptar</string>
    <string name="menu1">Consultar datos usuario</string>
    <string name="menu2">Modificar datos de usuario</string>
    <string name="menu3">Consultar pedidos</string>
    <string name="menu4">Borrar Usuario</string>
    <string name="menu5">Salir</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="tv_7">Elige tus platos</string>
    <string name="btn_pedido">Ver pedido</string>
    <string name="tv_8">Tus platos</string>
    <string name="btn_borrar">Borrar</string>
    <string name="h1">Nombre de Usuario</string>
    <string name="h2">Contraseña</string>
    <string name="h3">Direccion</string>
    <string name="h4">Telefono</string>
    <string name="h5">Email</string>
    <string name="h6">Nueva contraseña</string>
    <string name="btn_modificar">Modificar</string>
    <string name="btn_visualizar">Visualizar</string>
    <string name="tus_platos">Tus platos</string>
    <string name="superior_8">Debe rellenar todos los campos y que su contraseña sea igual y superior a 8 dígitos</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="no_encontrado">Usuario no encontrado</string>
    <string name="BB_DD_actualizada">Base de datos actualizada</string>
    <string name="plato_elegido">Plato elegido: </string>
    <string name="precio">Precio: </string>
    <string name="total">Total: </string>
    <string name="platos_no_introducidos">No hay platos introducidos</string>
    <string name="digitos">La contraseña debe ser mayor de 8 dígitos</string>
    <string name="usu_regis">Nombre de usuario ya registrado</string>
    <string name="pedidos">El usuario aun no ha hecho pedidos</string>
    <string name="usu_borra">Usuario borrado</string>
    <string name="suspe">Sus pedidos son: </string>
    <string name="pedlle">Su pedido llegará en :</string>
    <string name="eliminar_plato_pedido">Quieres eliminar este plato de tu pedido?</string>
    <string name="elegir_accion">Elegir acción</string>

</resources>