<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cL_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="410dp"
        android:layout_height="727dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/icono" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/tV_user"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/introduce_usuario"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold|italic" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="8">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                app:srcCompat="@drawable/flecha" />

            <EditText
                android:id="@+id/eT_user"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:inputType="textPersonName"
                android:text="@string/usuario"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tV_password"
                android:layout_width="248dp"
                android:layout_height="51dp"
                android:text="@string/introduce_password"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="8">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                app:srcCompat="@drawable/flecha" />

            <EditText
                android:id="@+id/eT_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:ems="10"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tV_error"
                android:layout_width="193dp"
                android:layout_height="25dp" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="8">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <Button
                android:id="@+id/btn_enter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:backgroundTint="@color/design_default_color_secondary_variant"
                android:gravity="center|center_horizontal|center_vertical"
                android:maxWidth="100dp"
                android:text="@string/btn_enter" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="8">

            <TextView
                android:id="@+id/tV_registrarse"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/texto_registrarse"
                android:textAlignment="textEnd"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tV_registrate"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:text="@string/registrate"
                android:textAlignment="textStart"
                android:textColor="@color/teal_200" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>