<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/comida_negro"
    tools:context=".MainActivity11">

    <TableLayout
        android:id="@+id/tl4"
        android:layout_width="300dp"
        android:layout_height="358dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466">

        <TableRow
            android:id="@+id/tr113"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:minHeight="150dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="227dp"
                android:layout_height="121dp"
                app:srcCompat="@drawable/icono_fondo" />
        </TableRow>

        <TableRow
            android:id="@+id/tr_111"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:minHeight="70dp">

            <EditText
                android:id="@+id/ed_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/h1"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:id="@+id/tr112"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:minHeight="70dp">

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/h2"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:id="@+id/tr_117"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:gravity="center"
            android:minHeight="70dp">

            <Button
                android:id="@+id/btn_111"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#871515"
                android:text="@string/btn_borrar" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>